fix: fixed errors

--- a/index.html
+++ b/index.html
@@ -16,10 +16,7 @@
           Mavlekiev Marat
         </h1>
         <figure class="header-avatar">
-          <img class="header-img" src="assets/img/avatar.jpg" 
-          width="200"
-          height="200"
-          alt="Mavlekiev Marat">
+          <img class="header-img" src="assets/img/avatar.jpg" width="200" height="200" alt="Mavlekiev Marat">
         </figure>
       </div>
       <nav class="header__nav">
