fix: fixed errors

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           Mavlekiev Marat
         </h1>
         <figure class="header-avatar">
-          <img class="header-img" src="assets/img/avatar.jpg" width="200" height="200" alt="Mavlekiev Marat">
+          <img class="header-img" src="assets/img/avatar.jpg"  alt="Mavlekiev Marat">
         </figure>
       </div>
       <nav class="header__nav">
@@ -174,10 +174,8 @@
         <pre>
           <code>
             let startYear, finishYear;
-  
             startYear = +prompt( 'Введите начальный год (начиная от 1900)', '' );
             finishYear = +prompt( 'Введите конечный год (не более 2016)', '' );
-            
             if (startYear &gt; finishYear) {
                 alert('Вы ввели значение насального года выше, чем значение конечного года');
             } else {
@@ -226,7 +224,7 @@
         2024
       </p>
       <a class="footer__rsschool" href="https://rs.school/courses/javascript-ru" target="_blank">
-        <img src="assets/svg/rs-school-logo.svg" width="85" height="32" alt="RS School">
+        <img class="footer-img" src="assets/svg/rs-school-logo.svg" alt="RS School">
       </a>
     </div>
   </footer>
